# code_validator

backend/: .gitignore  package-lock.json  package.json  pyproject.toml  serverless.yml
backend/backend/: handler.py  resources.py  verification_code.py
backend/backend/code_api/: get.py  post.py
backend/tests/: verification_code_test.py
frontend/src/: App.js
frontend/src/components/: ValidatorForm.js
